fix(后端): P1-2 N+1 标签加载 + P1-6 restic init 幂等性
P1-2 Performance:
- SnapshotService.getSnapshotsPaged(): batch load tags via findBySnapshotIdsIn()
  to eliminate N+1 queries on paginated snapshot lists

P1-6 Snapshot Engine:
- ResticClient.init(): detect 'already initialized' message and return true
  instead of treating it as an error (restic exit code 1 for existing repos)

Tests: 344 active, 0 failures